Late first commit. I've been primarily creating and styling the multiple navs.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8"/>
+        <link rel="stylesheet" href="style.css">
         <title>Glossier</title>
     </head>
 
     <body>
-        <h1>Write things here!</h1>
+        <div class="promo-bar">Subscribe + save 10% on your favorites, plus flexible delivery that fits your needs. Learn more</div>
+        <div class="header">
+            <div class="brand"><img src="glossiersmall.png" alt="Glossier Logo" width="88" height="36"></div>
+            <nav class="nav-center">
+              <a href="#">SKINCARE</a>
+              <a href="#">MAKEUP</a>
+              <a href="#">BALMS</a>
+              <a href="#">BODY</a>
+              <a href="#">FRAGRANCE</a>
+              <a href="#">GLOSSIER GOODS</a>
+              <a href="#">SETS</a>
+            </nav>
+            <nav class="nav-right">
+                <a href="#">🌐︎ US</a>
+                <a href="#">SEARCH</a>
+                <a href="#">STORES</a>
+                <a href="#">LOGIN</a>
+                <a href="#">BAG (0)</a>
+            </nav>
+          </div>
+        <div class="hero-content"><div class="hero-content-subtitle">LIMITED TIME!</div></div>
     </body>
 </html>
+
