Added hero-content-copy and Terms Apply

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 <a href="#">BAG (0)</a>
             </nav>
           </div>
-        <div class="hero-content"><div class="hero-content-subtitle">LIMITED TIME!</div></div>
+        <div class="hero-content"><div class="hero-content-subtitle">LIMITED TIME!</div>
+        <p><div class="hero-content-title">Glossier You Fleur</div></p>
+        <p><div class="hero-content-copy">Celebrate the launch of our airy and luminous floral fragrance with an accessory that sparks wonder. Yours with any qualifying order.</div></p>
+        <p><u><i><a href="#">Terms apply</a></i></u></p></div>
     </body>
 </html>
 
